# cmar

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DEMO_SCRIPT.md  OPERATING_MODEL.md  PRODUCT_BRIEF.md  QUICKSTART.md  README.md  RELEASE_MANIFEST.json  RELEASE_VERDICT.md  SECURITY.md  pyproject.toml
artifacts/: audit_fusion_report.json  audit_projection.json  audit_snapshot.json  autofill_report.json  corpus_eval_report.json  doctor_default_root.json  doctor_report.json  expansion_report.json  falsification_report.json  fused_integrated_state.json  github_activity_30d.json  integrated_state.json  integrated_state_with_github.json  mass_ledger.json  normalized_state.json  quantized_state.json  release_check_summary.json  repair_plan.json  repository_tree.txt  runtime_real_account.json  runtime_report.json  test_corpus_eval.json  test_doctor_default.json  test_github_activity_input.json  void_graph.json
docs/: ARCHITECTURE.md  ARTIFACTS.md  AUTOFILL.md  CLI.md  DEMO.md  FALSIFICATION.md  INVARIANT.md  OPERATOR_RUNBOOK.md  PIPELINE.md  audit_stream_integration.md
schemas/: autofill_report.schema.json  falsification.schema.json  falsification_report.schema.json  integrated.schema.json  integrated_state.schema.json  mass_ledger.schema.json  normalized.schema.json  normalized_state.schema.json  quantized.schema.json  quantized_state.schema.json  scan.schema.json  scan_report.schema.json  void_node.schema.json
scripts/: generate_manifest.py  release_check.py  update_readme_stats.py
src/cmar/: __init__.py  (+26 more)
tests/: _base.py  test_audit_fusion.py  test_audit_stream.py  test_autofill.py  test_cli.py  test_cli_contracts.py  test_doctor.py  test_expander.py  test_falsifier.py  test_github_activity.py  test_github_activity_fail_closed.py  test_github_activity_no_token_leak.py  test_github_activity_org_owner.py  test_github_activity_user_owner.py  test_integrator.py  test_ledger.py  test_normalizer.py  test_plan.py  test_protocol.py  test_quantizer.py  test_release_check.py  test_repair.py  test_runtime_real_account.py  test_runtime_suite.py  test_scan.py  test_server.py  test_stats.py  test_synthesis.py  test_voids.py
verdicts/: GeoSync.json  bsff_v0_1_5_development_full_package.json  cognitive-mirror-methods.json  cross_asset_sync_regime.json
(+28 files in other folders)
