# SPDX-License-Identifier: GPL-3.0-or-later
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cmar"
version = "0.1.0"
description = "Cognitive Mass Autofill Runtime — turns raw software intent into a validated, falsification-gated artifact state."
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
authors = [{ name = "Yaroslav Vasylenko" }]
keywords = ["release-engineering", "falsification", "artifact-validation", "repository-analysis", "deterministic"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.8"]

[project.scripts]
cmar = "cmar.cli:main"

[project.urls]
Homepage = "https://github.com/neuron7xLab/cmar"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
