[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
[project]
name = "cognitive-mass-autofill-runtime"
version = "1.5.0"
description = "Cognitive artifact-materialization runtime with normalization, quantization, integration, falsification, autofill, and real GitHub activity evidence."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
[project.scripts]
cmar = "cmar.cli:_main"
[tool.setuptools.packages.find]
where = ["src"]
