[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
[project]
name = "cognitive-mass-autofill-runtime"
version = "1.8.1"
description = "Cognitive artifact-materialization runtime with normalization, quantization, cross-stream synthesis, future-state expansion projection, falsification, autofill, real GitHub activity evidence, and an HTTP runtime server."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
[project.scripts]
cmar = "cmar.cli:_main"
[tool.setuptools.packages.find]
where = ["src"]
